2001-09-15  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-macs.el (dolist)
	(dotimes): New macros. From Emacs 21.

	(skk-put-last-henkan-datum)
	(skk-put-last-henkan-data): Use `push'.

	(skk-key-binding-member)
	(skk-loop-for-buffers): Use `dolist'.

	* skk-comp.el (skk-comp-do)
	(skk-comp-by-history): Use `dolist' and `push'.

	* skk-cursor.el (skk-cursor-set): New function. Advice,
	hooks and functions in this program will call it.

	* skk-isearch.el (skk-isearch-setup-keymap): Use `push'.

	* skk.el (skk-setup-emulation-commands): Use `dolist'.

	* install-info.el (install-info-1): Use `push' and `setcar'.

2001-09-15  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-comp.el: Re-indent and re-order cases.
	(skk-comp-do-1-in-buf): New function.
	(skk-comp-do-1): Call it. Refer to `skk-dic-comp-first'.
	(skk-comp-do): Add only new words.

	* skk-dic.el (skk-dic-setup-buffer): New function.
	(skk-search-small-dic): Call it.

	* skk-vars.el (skk-dic-comp-first): New variable.

	* skk-macs.el (skk-loop-for-buffers): Use `while'. Use `if'.

2001-09-14  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-version.el (skk-version): Bump to 11.5.1.

	* READMEs/Contributors: Following persons are added (a-b order).

	Daiki Ueno <ueno@unixuser.org>

	EGUCHI Satoshi <eguchi@kyoto-wu.ac.jp>

	Martin Buchholz <martin@xemacs.org>

	Norio Maeda <nmaeda@dd.iij4u.or.jp>

	Toru YANO <toru@maid.ne.jp>

	Yoshiki Hayashi <yoshiki@xemacs.org>

	* Makefile (skk-dic): New target.

	* SKK-CFG: Modify examples for Windows.

	* SKK-MK (SKK-MK-skk-dic): New function.

	* skk-dic.el (skk-small-dic): Typo.

	(skk-search-small-dic): Call `buffer-size' with no argument.

	* skk-e21.el (skk-e21-modeline-property): Use `static-if'.

	(skk-e21-modeline-menu-items): nil under tty.

	* skk-macs.el (skk-loop-for-buffers): New macro.

	* skk-vars.el (skk-emacs-type): Use ordinary clauses.

	* skk.el: Re-indent.
	Make the 1st argment of `error' a format string.
